@startuml
!theme plain
skinparam classAttributeIconSize 0
skinparam monochrome true

title Diagramme de Classes - Système de Détection de Chutes par Edge AI

class User {
    - id: INTEGER
    - firstname: TEXT
    - lastname: TEXT
    - email: TEXT
    - password_hash: TEXT
    - phone: TEXT
    - role: TEXT
    - status: TEXT
    - created_at: DATETIME
    - updated_at: DATETIME
    + authenticate(): Boolean
    + updateProfile(): Boolean
    + changePassword(): Boolean
}

class Patient {
    - id: INTEGER
    - user_id: INTEGER
    - age: INTEGER
    - gender: TEXT
    - weight: REAL
    - height: REAL
    - mobility_level: TEXT
    - medical_notes: TEXT
    - address: TEXT
    - latitude: REAL
    - longitude: REAL
    + getMedicalProfile(): JSON
    + updateMobility(): Boolean
    + addEmergencyContact(): Boolean
}

class EmergencyContact {
    - id: INTEGER
    - patient_id: INTEGER
    - fullname: TEXT
    - relationship: TEXT
    - phone: TEXT
    - email: TEXT
    - priority: INTEGER
    + notify(): Boolean
    + updateContact(): Boolean
}

class Room {
    - id: INTEGER
    - patient_id: INTEGER
    - room_name: TEXT
    - floor: INTEGER
    - description: TEXT
    + addCamera(): Boolean
    + getCameras(): List
}

class Camera {
    - id: INTEGER
    - room_id: INTEGER
    - camera_name: TEXT
    - ip_address: TEXT
    - rtsp_url: TEXT
    - resolution: TEXT
    - fps: INTEGER
    - status: TEXT
    - installation_date: DATETIME
    + startStream(): Boolean
    + stopStream(): Boolean
    + captureFrame(): Image
    + getStatus(): TEXT
}

class MonitoringSession {
    - id: INTEGER
    - camera_id: INTEGER
    - patient_id: INTEGER
    - start_time: DATETIME
    - end_time: DATETIME
    - duration: INTEGER
    - status: TEXT
    + start(): Boolean
    + stop(): Boolean
    + getDuration(): INTEGER
    + isActive(): Boolean
}

class SkeletonFrame {
    - id: INTEGER
    - session_id: INTEGER
    - timestamp: DATETIME
    - frame_number: INTEGER
    - nose_x: REAL
    - nose_y: REAL
    - nose_z: REAL
    - left_eye_inner_x: REAL
    - left_eye_inner_y: REAL
    - left_eye_inner_z: REAL
    - left_eye_x: REAL
    - left_eye_y: REAL
    - left_eye_z: REAL
    - left_eye_outer_x: REAL
    - left_eye_outer_y: REAL
    - left_eye_outer_z: REAL
    - right_eye_inner_x: REAL
    - right_eye_inner_y: REAL
    - right_eye_inner_z: REAL
    - right_eye_x: REAL
    - right_eye_y: REAL
    - right_eye_z: REAL
    - right_eye_outer_x: REAL
    - right_eye_outer_y: REAL
    - right_eye_outer_z: REAL
    - left_ear_x: REAL
    - left_ear_y: REAL
    - left_ear_z: REAL
    - right_ear_x: REAL
    - right_ear_y: REAL
    - right_ear_z: REAL
    - mouth_left_x: REAL
    - mouth_left_y: REAL
    - mouth_left_z: REAL
    - mouth_right_x: REAL
    - mouth_right_y: REAL
    - mouth_right_z: REAL
    - left_shoulder_x: REAL
    - left_shoulder_y: REAL
    - left_shoulder_z: REAL
    - right_shoulder_x: REAL
    - right_shoulder_y: REAL
    - right_shoulder_z: REAL
    - left_elbow_x: REAL
    - left_elbow_y: REAL
    - left_elbow_z: REAL
    - right_elbow_x: REAL
    - right_elbow_y: REAL
    - right_elbow_z: REAL
    - left_wrist_x: REAL
    - left_wrist_y: REAL
    - left_wrist_z: REAL
    - right_wrist_x: REAL
    - right_wrist_y: REAL
    - right_wrist_z: REAL
    - left_pinky_x: REAL
    - left_pinky_y: REAL
    - left_pinky_z: REAL
    - right_pinky_x: REAL
    - right_pinky_y: REAL
    - right_pinky_z: REAL
    - left_index_x: REAL
    - left_index_y: REAL
    - left_index_z: REAL
    - right_index_x: REAL
    - right_index_y: REAL
    - right_index_z: REAL
    - left_thumb_x: REAL
    - left_thumb_y: REAL
    - left_thumb_z: REAL
    - right_thumb_x: REAL
    - right_thumb_y: REAL
    - right_thumb_z: REAL
    - left_hip_x: REAL
    - left_hip_y: REAL
    - left_hip_z: REAL
    - right_hip_x: REAL
    - right_hip_y: REAL
    - right_hip_z: REAL
    - left_knee_x: REAL
    - left_knee_y: REAL
    - left_knee_z: REAL
    - right_knee_x: REAL
    - right_knee_y: REAL
    - right_knee_z: REAL
    - left_ankle_x: REAL
    - left_ankle_y: REAL
    - left_ankle_z: REAL
    - right_ankle_x: REAL
    - right_ankle_y: REAL
    - right_ankle_z: REAL
    - left_heel_x: REAL
    - left_heel_y: REAL
    - left_heel_z: REAL
    - right_heel_x: REAL
    - right_heel_y: REAL
    - right_heel_z: REAL
    - left_foot_index_x: REAL
    - left_foot_index_y: REAL
    - left_foot_index_z: REAL
    - right_foot_index_x: REAL
    - right_foot_index_y: REAL
    - right_foot_index_z: REAL
    + analyzeFall(): Boolean
    + calculateCenterOfGravity(): Point
    + calculateTrunkAngle(): REAL
}

class Fall {
    - id: INTEGER
    - session_id: INTEGER
    - detection_time: DATETIME
    - trunk_angle: REAL
    - body_height: REAL
    - vertical_speed: REAL
    - acceleration: REAL
    - center_gravity_x: REAL
    - center_gravity_y: REAL
    - center_gravity_speed: REAL
    - immobility_duration: REAL
    - floor_time: REAL
    - kinetic_energy: REAL
    - confidence_score: REAL
    - fall_score: REAL
    - severity_score: REAL
    - injury_probability: REAL
    - result: TEXT
    + calculateSeverity(): REAL
    + calculateInjuryProbability(): REAL
    + generateAlert(): Boolean
}

class Alert {
    - id: INTEGER
    - fall_id: INTEGER
    - alert_level: TEXT
    - sent_at: DATETIME
    - acknowledged: BOOLEAN
    - response_time: INTEGER
    + send(): Boolean
    + acknowledge(): Boolean
    + escalate(): Boolean
}

class Notification {
    - id: INTEGER
    - alert_id: INTEGER
    - channel: TEXT
    - recipient: TEXT
    - status: TEXT
    - sent_time: DATETIME
    + sendTelegram(): Boolean
    + sendEmail(): Boolean
    + sendSMS(): Boolean
    + retry(): Boolean
}

class IncidentHistory {
    - id: INTEGER
    - fall_id: INTEGER
    - event_type: TEXT
    - description: TEXT
    - timestamp: DATETIME
    + addEvent(): Boolean
    + getTimeline(): List
}

class SimulationVideo {
    - id: INTEGER
    - filename: TEXT
    - description: TEXT
    - expected_result: TEXT
    - upload_date: DATETIME
    + upload(): Boolean
    + process(): Boolean
}

class SimulationResult {
    - id: INTEGER
    - simulation_id: INTEGER
    - precision: REAL
    - recall: REAL
    - f1_score: REAL
    - false_positive: INTEGER
    - false_negative: INTEGER
    - detection_time: INTEGER
    + calculateMetrics(): JSON
    + compare(): Boolean
}

class AISettings {
    - id: INTEGER
    - threshold_angle: REAL
    - threshold_speed: REAL
    - threshold_acceleration: REAL
    - threshold_immobility: REAL
    - threshold_floor_time: REAL
    - threshold_severity: REAL
    - weight_angle: REAL
    - weight_speed: REAL
    - weight_acceleration: REAL
    - weight_immobility: REAL
    - weight_floor_time: REAL
    - modified_at: DATETIME
    + updateThreshold(): Boolean
    + updateWeight(): Boolean
    + resetToDefault(): Boolean
    + validateWeights(): Boolean
}

class KPI {
    - id: INTEGER
    - accuracy: REAL
    - precision: REAL
    - recall: REAL
    - specificity: REAL
    - sensitivity: REAL
    - f1_score: REAL
    - false_positive_rate: REAL
    - false_negative_rate: REAL
    - mean_detection_time: REAL
    - mean_alert_time: REAL
    - uptime: REAL
    - calculated_at: DATETIME
    + calculate(): Boolean
    + getReport(): JSON
    + exportCSV(): Boolean
}

class AuditLog {
    - id: INTEGER
    - user_id: INTEGER
    - action: TEXT
    - table_name: TEXT
    - record_id: INTEGER
    - old_values: TEXT
    - new_values: TEXT
    - timestamp: DATETIME
    - ip_address: TEXT
    + log(): Boolean
    + queryByUser(): List
    + queryByAction(): List
}

class SecurityLog {
    - id: INTEGER
    - user_id: INTEGER
    - event_type: TEXT
    - description: TEXT
    - success: BOOLEAN
    - timestamp: DATETIME
    - ip_address: TEXT
    + log(): Boolean
    + detectAnomalies(): List
    + getFailedAttempts(): List
}

class SystemSettings {
    - id: INTEGER
    - key: TEXT
    - value: TEXT
    - description: TEXT
    - modified_at: DATETIME
    + get(): TEXT
    + set(): Boolean
    + reset(): Boolean
}

' Relationships
User "1" -- "0..*" Patient : manages >
Patient "1" -- "1..*" EmergencyContact : has >
Patient "1" -- "1..*" Room : has >
Room "1" -- "1..*" Camera : contains >
Camera "1" -- "0..*" MonitoringSession : records >
Patient "1" -- "0..*" MonitoringSession : monitored in >
MonitoringSession "1" -- "0..*" SkeletonFrame : captures >
MonitoringSession "1" -- "0..*" Fall : detects >
Fall "1" -- "1..*" Alert : generates >
Alert "1" -- "1..*" Notification : sends via >
Fall "1" -- "0..*" IncidentHistory : logs >
SimulationVideo "1" -- "0..*" SimulationResult : produces >
User "0..*" -- "0..*" AuditLog : performs >
User "0..*" -- "0..*" SecurityLog : triggers >

' Singleton classes
AISettings : Singleton
KPI : Singleton

note right of User
  Roles:
  - ADMIN
  - MEDECIN
  - FAMILLE
  - TECHNICIEN
  
  Status:
  - ACTIF
  - INACTIF
  - SUSPENDU
end note

note right of Patient
  Mobility Level:
  - AUTONOME
  - CANNE
  - DEAMBULATEUR
  - FAUTEUIL
end note

note right of Fall
  Result:
  - CHUTE_CONFIRMEE
  - FAUX_POSITIF
  - INDETERMINE
  
  Severity Score:
  0.0 - 1.0
end note

note right of Alert
  Level:
  - CRITIQUE
  - HAUTE
  - MOYENNE
  - BASSE
end note

note right of Notification
  Channels:
  - TELEGRAM
  - EMAIL
  - SMS
  - PUSH
end note

note right of SkeletonFrame
  33 MediaPipe Pose Landmarks
  - Nose (3)
  - Eyes (9)
  - Ears (6)
  - Mouth (6)
  - Shoulders (6)
  - Elbows (6)
  - Wrists (6)
  - Pinkies (6)
  - Index (6)
  - Thumbs (6)
  - Hips (6)
  - Knees (6)
  - Ankles (6)
  - Heels (6)
  - Foot Index (6)
  
  Total: 99 coordinates
end note

@enduml
